buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.2'
    }
}

plugins {
    //id "io.franzbecker.gradle-lombok" version "1.11"
    id 'java'
    id 'application'
    id 'net.ltgt.apt' version '0.10'
}
apply plugin: 'org.junit.platform.gradle.plugin'

group 'com.detoeuf'
version '1.0-SNAPSHOT'
sourceCompatibility = 9
mainClassName = "com.detoeuf.test.Application"

repositories {
    mavenCentral()
}

ext {
    junitJupiterVersion = '5.0.2'
    logbackVersion = '1.2.3'
    lombokVersion = '1.16.18'
}

tasks.withType(JavaCompile) { // see note below
    options.fork = true
    options.forkOptions.jvmArgs += [
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
    ]
}

dependencies {
    compile 'io.vavr:vavr:0.9.1'

    compileOnly files("lib/lombok-edge.jar")

    compile "org.slf4j:slf4j-api:1.7.25"
    compile "ch.qos.logback:logback-core:${logbackVersion}"
    compile "ch.qos.logback:logback-classic:${logbackVersion}"

    testCompile 'org.assertj:assertj-core:3.8.0'
    testCompile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
    testCompile "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
    testRuntime "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
}
